--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,15 +360,15 @@ actually any pages with this document type.</p>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.gravesham.gov.uk">Gravesham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lambeth.gov.uk">London Borough of Lambeth Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.islington.gov.uk/">London Borough of Islington Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oldham.gov.uk/">Oldham Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.west-norfolk.gov.uk">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
+<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
