--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
-      <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
+      <li><a href="https://www.organdonation.nhs.uk/" class="govuk-link">Organ donation</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
+      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
       <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
-      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
-      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
-      <li><a href="http://www.crawley.gov.uk" class="govuk-link">Crawley Borough Council</a></li>
-      <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
       <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
+      <li><a href="http://www.islington.gov.uk/" class="govuk-link">London Borough of Islington Council</a></li>
+      <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
